--- a/rock–paper–scissors/rock-paper-scissors.ipynb
+++ b/rock–paper–scissors/rock-paper-scissors.ipynb
@@ -25,49 +25,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import the choice function of the random module\n",
-    "# https://stackoverflow.com/questions/306400/how-to-randomly-select-an-item-from-a-list\n",
+    "\n",
+    "import random\n",
     "\n",
     "# Assign to a list the 3 possible options: 'stone', 'paper' or 'scissors'.\n",
-    "\n",
     "# Assign a variable to the maximum number of games: 1, 3, 5, etc ...\n",
     "\n",
+    "qtd_max = 3\n",
+    "\n",
     "# Assign a variable to the number of games a player must win to win.\n",
+    "\n",
+    "para_ganhar = 3\n",
+    "\n",
     "# Preferably the value will be based on the number of maximum games\n",
-    "\n",
     "# Define a function that randomly returns one of the 3 options.\n",
-    "# This will correspond to the play of the machine. Totally random.\n",
+    "\n",
+    "game_machine=[]\n",
+    "game_user=[]\n",
+    "\n",
+    "opcoes = {'pedra':1, 'papel':2, 'tesoura':3}\n",
     "\n",
     "\n",
-    "# Define a function that asks your choice: 'stone', 'paper' or 'scissors'\n",
-    "# you should only allow one of the 3 options. This is defensive programming.\n",
-    "# If it is not stone, paper or scissors keep asking until it is.\n",
     "\n",
+    "def jogada():\n",
+    "    return random.choice(list(opcoes.keys()))\n",
+    " \n",
     "\n",
-    "# Define a function that resolves a combat.\n",
-    "# Returns 0 if there is a tie, 1 if the machine wins, 2 if the human player wins\n",
-    "\n",
+    "def pergunta():\n",
+    "    escolha = int(input(\"\\nEscolha uma opção = 1 - pedra, 2 - papel, 3 - tesoura = \\n\"))\n",
+    "    while escolha != opcoes.values():\n",
+    "        if escolha == 1:\n",
+    "            escolha = \"pedra\"\n",
+    "            break\n",
+    "        elif escolha == 2:\n",
+    "            escolha = \"papel\"\n",
+    "            break\n",
+    "        elif escolha == 3:\n",
+    "            escolha = \"tesoura\"\n",
+    "            break\n",
+    "        else:\n",
+    "            escolha = int(input(\"\\n Você só pode escolher entre = 1 - pedra, 2 - papel, 3 - tesoura = \\n\"))\n",
+    "            \n",
+    "    return escolha\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Escolha uma opção = 1 - pedra, 2 - papel, 3 - tesoura = \n",
+      "1\n",
+      "\n",
+      "A máquina escolheu =  tesoura \n",
+      "Você escolheu =  pedra\n",
+      "\n",
+      "Você ganhou essa rodada\n",
+      "\n",
+      "Escolha uma opção = 1 - pedra, 2 - papel, 3 - tesoura = \n",
+      "1\n",
+      "\n",
+      "A máquina escolheu =  pedra \n",
+      "Você escolheu =  pedra\n",
+      "\n",
+      "Deu empate\n",
+      "\n",
+      "Escolha uma opção = 1 - pedra, 2 - papel, 3 - tesoura = \n",
+      "1\n",
+      "\n",
+      "A máquina escolheu =  tesoura \n",
+      "Você escolheu =  pedra\n",
+      "\n",
+      "Você ganhou essa rodada\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(qtd_max):\n",
+    "    user = pergunta()\n",
+    "    machine = jogada()\n",
     "    \n",
-    "# Define a function that shows the choice of each player and the state of the game\n",
-    "# This function should be used every time accumulated points are updated\n",
-    "\n",
+    "    print(\"\\nA máquina escolheu = \", machine, \"\\nVocê escolheu = \", user)\n",
     "    \n",
-    "# Create two variables that accumulate the wins of each participant\n",
-    "\n",
-    "\n",
-    "# Create a loop that iterates while no player reaches the minimum of wins\n",
-    "# necessary to win. Inside the loop solves the play of the\n",
-    "# machine and ask the player's. Compare them and update the value of the variables\n",
-    "# that accumulate the wins of each participant.\n",
-    "\n",
-    "\n",
-    "    \n",
-    "# Print by console the winner of the game based on who has more accumulated wins\n",
-    "  "
+    "    if user == 'papel':\n",
+    "        if machine == 'papel':\n",
+    "            print(\"\\nDeu empate\")\n",
+    "        elif machine == 'tesoura':\n",
+    "            print(\"\\nA máquina ganhou essa rodada\")\n",
+    "        else:\n",
+    "            print(\"\\nVocê ganhou essa rodada\")\n",
+    "    elif user == 'pedra':\n",
+    "        if machine == 'papel':\n",
+    "            print(\"\\nA máquina ganhou essa rodada\")\n",
+    "        elif machine == 'tesoura':\n",
+    "            print(\"\\nVocê ganhou essa rodada\")\n",
+    "        else:\n",
+    "            print(\"\\nDeu empate\")\n",
+    "    elif user == 'tesoura':\n",
+    "        if machine == 'papel':\n",
+    "            print(\"\\nVocê ganhou essa rodada\")\n",
+    "        elif machine == 'tesoura':\n",
+    "            print(\"\\nDeu empate\")\n",
+    "        else:\n",
+    "            print(\"\\nA máquina ganhou essa rodada\")\n",
+    "    else:\n",
+    "        print(\"\\nerrado\")\n",
+    "    \n"
    ]
   },
   {
@@ -93,18 +165,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Quantidade máxima de jogo = 3\n",
+      "\n",
+      " INICIANDO RODADA =  1 \n",
+      "\n",
+      "\n",
+      "Escolha uma opção = 1 - pedra, 2 - papel, 3 - tesoura , 4 - lagarto, 5 - spok = \n",
+      "1\n",
+      "Usuário escolheu 1 e máquina escolheu 3\n",
+      "Resultado = 2\n",
+      "\n",
+      " INICIANDO RODADA =  2 \n",
+      "\n",
+      "\n",
+      "Escolha uma opção = 1 - pedra, 2 - papel, 3 - tesoura , 4 - lagarto, 5 - spok = \n",
+      "1\n",
+      "Usuário escolheu 1 e máquina escolheu 5\n",
+      "Resultado = 1\n",
+      "\n",
+      " INICIANDO RODADA =  3 \n",
+      "\n",
+      "\n",
+      "Escolha uma opção = 1 - pedra, 2 - papel, 3 - tesoura , 4 - lagarto, 5 - spok = \n",
+      "1\n",
+      "Usuário escolheu 1 e máquina escolheu 2\n",
+      "Resultado = 1\n",
+      "\n",
+      " Pontos para o usuário =  1 Pontos para a máquina =  2 Empate =  0 \n",
+      "\n",
+      "A MÁQUINA GANHOU\n"
+     ]
+    }
+   ],
    "source": [
-    "# Import the choice function of the random module\n",
+    "# # Import the choice function of the random module\n",
+    "\n",
+    "import random\n",
+    "\n",
+    "\n",
+    "game_machine=[]\n",
+    "game_user=[]\n",
+    "\n",
     "\n",
     "\n",
     "# Define a function that asks for an odd number on the keyboard, until it is not valid\n",
     "# will keep asking\n",
     "\n",
+    "def pergunta():\n",
+    "    valor= int(input(\"Insira um valor ímpar\"))\n",
+    "    validacao = valor % 2\n",
+    "    while validacao == 0:\n",
+    "        valor = int(input(\"Insira APENAS um valor ímpar\"))\n",
+    "        validacao = valor % 2\n",
+    "    return (\"Valor é impar\")\n",
+    "    \n",
+    "\n",
     "\n",
     "# Assign a list of 5 possible options.\n",
+    "\n",
+    "opcoes = {1:'pedra', 2: 'papel', 3 :'tesoura', 4 :'lagarto', 5: 'spock' }\n",
+    "\n",
+    "combinacoes = {1:[4,3], 2:[1,5], 3 :[4,2], 4 :[2,5], 5:[1,3]}\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "# Assign a variable to the maximum number of games: 1, 3, 5, etc ...\n",
@@ -115,44 +245,96 @@
     "# Preferably the value will be based on the number of maximum games\n",
     "\n",
     "\n",
+    "qtd_max = int(input(\"Quantidade máxima de jogo = \"))\n",
+    "\n",
+    "\n",
+    "\n",
     "# Define a function that randomly returns one of the 5 options.\n",
     "# This will correspond to the play of the machine. Totally random.\n",
     "\n",
+    "def jogada():\n",
+    "    return random.choice(list(opcoes.keys()))\n",
     "\n",
     "# Define a function that asks your choice between 5\n",
     "# you should only allow one of the 5 options. This is defensive programming.\n",
     "# If it is not valid, keep asking until it is valid.\n",
     "\n",
+    "def pergunta():\n",
+    "    escolha = int(input(\"\\nEscolha uma opção = 1 - pedra, 2 - papel, 3 - tesoura , 4 - lagarto, 5 - spok = \\n\"))\n",
+    "    while escolha not in opcoes:\n",
+    "        escolha = int(input(\"\\nEscolha APENAS uma opção = 1 - pedra, 2 - papel, 3 - tesoura , 4 - lagarto, 5 - spok = \\n\"))\n",
+    "    return escolha\n",
+    "\n",
     "\n",
     "# Define a function that resolves a combat.\n",
+    "\n",
+    "\n",
+    "def combate(user, machine):\n",
+    "    if user in combinacoes:\n",
+    "        if user != machine:\n",
+    "            if machine in combinacoes[user]:\n",
+    "                user = 2\n",
+    "            elif machine not in combinacoes[user]:\n",
+    "                user = 1\n",
+    "        else:\n",
+    "            user = 0\n",
+    "    return user\n",
+    "    \n",
     "# Returns 0 if there is a tie, 1 if the machine wins, 2 if the human player wins\n",
     "# Now there are more options\n",
     " \n",
     "\n",
-    "    \n",
     "# Define a function that shows the choice of each player and the state of the game\n",
     "# This function should be used every time accumulated points are updated\n",
     "\n",
-    "    \n",
+    "def show():\n",
+    "    lista_resultado = []\n",
+    "    for i in range(qtd_max):\n",
+    "        print('\\n INICIANDO RODADA = ', i + 1, '\\n' )\n",
+    "        resposta = pergunta()\n",
+    "        resultado = jogada()\n",
+    "        print (\"Usuário escolheu\", resposta, \"e máquina escolheu\", resultado)\n",
+    "        print(\"Resultado =\", combate(resposta, resultado))\n",
+    "        lista_resultado.append(combate(resposta, resultado))\n",
+    "    return lista_resultado\n",
+    "        \n",
+    "        \n",
+    "        \n",
     "# Create two variables that accumulate the wins of each participant\n",
-    "\n",
     "# Create a loop that iterates while no player reaches the minimum of wins\n",
     "# necessary to win. Inside the loop solves the play of the\n",
     "# machine and ask the player's. Compare them and update the value of the variables\n",
     "# that accumulate the wins of each participant.\n",
+    "\n",
+    "user_game = 0\n",
+    "machine_game = 0\n",
+    "tie = 0\n",
+    "\n",
+    "final = show()\n",
+    "\n",
+    "for i in final:\n",
+    "    if i == 2:\n",
+    "        user_game += 1\n",
+    "    elif i == 1:\n",
+    "        machine_game += 1\n",
+    "    else:\n",
+    "        tie += 1\n",
+    "        \n",
+    "print(\"\\n Pontos para o usuário = \", user_game,\"Pontos para a máquina = \", machine_game, \"Empate = \", tie, \"\\n\")\n",
+    "\n",
+    "\n",
+    "if user_game > machine_game:\n",
+    "    print('O USUÁRIO GANHOU')\n",
+    "elif user_game < machine_game:\n",
+    "    print('A MÁQUINA GANHOU')\n",
+    "else:\n",
+    "     print('DEU EMPATE')     \n",
     "\n",
     "    \n",
     "    \n",
     "# Print by console the winner of the game based on who has more accumulated wins\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -160,18 +342,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.7"
   }
  },
  "nbformat": 4,
