Atualizando os exercícios

--- a/bus/bus.ipynb
+++ b/bus/bus.ipynb
@@ -32,64 +32,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Digite a quantidade de passageiros ou '99' para sair\n",
-      "entrada = 2\n",
-      "saida = 1\n",
-      "entrada = 2\n",
-      "saida = 1\n",
-      "entrada = 2\n",
-      "saida = 1\n",
-      "entrada = 2\n",
-      "saida = 1\n",
-      "entrada = 2\n",
-      "saida = 1\n",
-      "entrada = fim\n",
-      "[(2, 1), (2, 1), (2, 1), (2, 1), (2, 1)]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# variables\n",
+    "\n",
     "entrada = 0\n",
     "saida = 0\n",
     "\n",
     "bus_stop = int()\n",
     "limite = 50\n",
-    "paradas = []\n",
-    "encerrar = False\n",
-    "\n",
-    "input(\"Digite a quantidade de passageiros ou '99' para sair\")\n",
-    "\n",
-    "while entrada !=  'fim':\n",
-    "    entrada = input(\"entrada = \")\n",
-    "    if entrada == 'fim':\n",
-    "        break\n",
-    "    else:\n",
-    "        saida = input(\"saida = \")\n",
-    "    bus_stop= (int(entrada), int(saida))\n",
-    "    paradas.append (bus_stop)\n",
-    "\n",
-    "\n",
-    "print(paradas)"
+    "paradas = []\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Quantidade de paradas =  5\n"
+      "*** '99' na variável 'entrada' para parar ***\n",
+      "\n",
+      "\n",
+      "entrada = 2\n",
+      "saida = 2\n",
+      "\n",
+      "entrada = 1\n",
+      "saida = 1\n",
+      "\n",
+      "entrada = 99\n",
+      "\n",
+      "Quantidade de paradas =  2 \n",
+      "Paradas [(2, 2), (1, 1)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Número de passageiros ENTRADA e SAÍDA\n",
+    "\n",
+    "print(\"*** '99' na variável 'entrada' para parar ***\\n\")\n",
+    "\n",
+    "while entrada !=  '99':\n",
+    "    entrada = input(\"\\nentrada = \")\n",
+    "    if entrada == '99':\n",
+    "        break\n",
+    "    else:\n",
+    "        saida = input(\"saida = \")\n",
+    "    bus_stop = (int(entrada), int(saida))\n",
+    "    paradas.append (bus_stop)\n",
+    "\n",
+    "\n",
+    "print(\"\\nQuantidade de paradas = \", len(paradas), \"\\nParadas\", (paradas))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Quantidade de paradas =  2\n"
      ]
     }
    ],
@@ -107,25 +116,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Histórico de ocupantes no ônibus =  [1, 2, 3, 4, 5]\n",
-      "Quantidade de passageiros no ônibus (final) =  5\n",
-      "Máximo de ocupantes =  5\n",
-      "Média de passageiros  =  3.0\n",
-      "Desvio Padrão do histórico de passageiros =  1.58\n"
+      "Histórico de ocupantes no ônibus =  [0, 0]\n",
+      "Quantidade de passageiros no ônibus (final) =  0\n",
+      "Máximo de ocupantes =  0\n",
+      "Média de passageiros  =  0.0\n"
      ]
     }
    ],
    "source": [
     "# 2. Assign a variable a list whose elements are the number of passengers in each stop: \n",
+    "\n",
+    "\n",
     "# Each item depends on the previous item in the list + in - out.\n",
-    "##Number passengers in the bus##\n",
+    "# Number passengers in the bus \n",
     "# 3. Find the maximum occupation of the bus.\n",
     "# 4. Calculate the average occupation. And the standard deviation.\n",
     "\n",
@@ -148,11 +158,29 @@
     "print('Quantidade de passageiros no ônibus (final) = ',total_pas)\n",
     "print('Máximo de ocupantes = ', max(hist_ocup))\n",
     "print('Média de passageiros  = ', soma/len(hist_ocup))\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Desvio Padrão do histórico de passageiros =  0.00\n"
+     ]
+    }
+   ],
+   "source": [
     "##Desvio padrão##\n",
     "\n",
     "import statistics\n",
-    "print( \"Desvio Padrão do histórico de passageiros = \", \"%.2f\" %(statistics.stdev(hist_ocup)))\n"
+    "print( \"Desvio Padrão do histórico de passageiros = \", \"%.2f\" %(statistics.stdev(hist_ocup)))\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -160,10 +188,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "\n",
-    "\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
