--- a/duel/duel.ipynb
+++ b/duel/duel.ipynb
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -256,18 +256,12 @@
     "    elif saruman_ganhou > 3:\n",
     "        print(\"Fim do Jogo: Saruman Ganhou\")\n",
     "    else:\n",
-    "        print(\"Fim do Jogo: ninguém ganhou\")\n",
-    "\n",
-    "\n",
-    "                   \n",
-    "\n",
-    "\n",
-    "\n"
+    "        print(\"Fim do Jogo: ninguém ganhou\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -294,8 +288,9 @@
     "##Soma##\n",
     "for i in saruman_power:\n",
     "    soma_saruman+=i\n",
+    "\n",
     "   \n",
-    "##Media##\n",
+    "## Média ##\n",
     "\n",
     "media_saruman = soma_saruman/len(saruman_power)\n",
     "\n",
@@ -316,6 +311,13 @@
     "import statistics\n",
     "print( \"Desvio Padrão Gandalf = \", \"%.2f\" %(statistics.stdev(gandalf_power)))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
