--- a/robin-hood/robin-hood.ipynb
+++ b/robin-hood/robin-hood.ipynb
@@ -57,17 +57,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RobinWood acertou 2  vezes nas coordenadas =  (4, 5)\n",
-      "RobinWood acertou 3  vezes nas coordenadas =  (5, 7)\n",
-      "RobinWood acertou 2  vezes nas coordenadas =  (2, 2)\n",
-      "RobinWood acertou 2  vezes nas coordenadas =  (-3, 2)\n"
+      "Robin Hood acertou 2  vezes nas coordenadas =  (4, 5)\n",
+      "Robin Hood acertou 3  vezes nas coordenadas =  (5, 7)\n",
+      "Robin Hood acertou 2  vezes nas coordenadas =  (2, 2)\n",
+      "Robin Hood acertou 2  vezes nas coordenadas =  (-3, 2)\n"
      ]
     }
    ],
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -236,14 +236,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Temos 2 flechas com o raio maior que 9\n"
+      "Temos 0 flechas com o raio maior que 9\n"
      ]
     }
    ],
@@ -259,20 +259,6 @@
     "\n",
     "print(\"Temos\", hit_out, \"flechas com o raio maior que 9\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
