--- a/rock–paper–scissors/rock-paper-scissors.ipynb
+++ b/rock–paper–scissors/rock-paper-scissors.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -86,24 +86,24 @@
       "Escolha uma opção = 1 - pedra, 2 - papel, 3 - tesoura = \n",
       "1\n",
       "\n",
+      "A máquina escolheu =  papel \n",
+      "Você escolheu =  pedra\n",
+      "\n",
+      "A máquina ganhou essa rodada\n",
+      "\n",
+      "Escolha uma opção = 1 - pedra, 2 - papel, 3 - tesoura = \n",
+      "1\n",
+      "\n",
       "A máquina escolheu =  tesoura \n",
       "Você escolheu =  pedra\n",
       "\n",
       "Você ganhou essa rodada\n",
       "\n",
       "Escolha uma opção = 1 - pedra, 2 - papel, 3 - tesoura = \n",
-      "1\n",
+      "2\n",
       "\n",
       "A máquina escolheu =  pedra \n",
-      "Você escolheu =  pedra\n",
-      "\n",
-      "Deu empate\n",
-      "\n",
-      "Escolha uma opção = 1 - pedra, 2 - papel, 3 - tesoura = \n",
-      "1\n",
-      "\n",
-      "A máquina escolheu =  tesoura \n",
-      "Você escolheu =  pedra\n",
+      "Você escolheu =  papel\n",
       "\n",
       "Você ganhou essa rodada\n"
      ]
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -179,28 +179,28 @@
       "\n",
       "Escolha uma opção = 1 - pedra, 2 - papel, 3 - tesoura , 4 - lagarto, 5 - spok = \n",
       "1\n",
-      "Usuário escolheu 1 e máquina escolheu 3\n",
-      "Resultado = 2\n",
+      "Usuário escolheu 1 e máquina escolheu 5\n",
+      "Resultado = 1\n",
       "\n",
       " INICIANDO RODADA =  2 \n",
       "\n",
       "\n",
       "Escolha uma opção = 1 - pedra, 2 - papel, 3 - tesoura , 4 - lagarto, 5 - spok = \n",
       "1\n",
-      "Usuário escolheu 1 e máquina escolheu 5\n",
-      "Resultado = 1\n",
+      "Usuário escolheu 1 e máquina escolheu 1\n",
+      "Resultado = 0\n",
       "\n",
       " INICIANDO RODADA =  3 \n",
       "\n",
       "\n",
       "Escolha uma opção = 1 - pedra, 2 - papel, 3 - tesoura , 4 - lagarto, 5 - spok = \n",
       "1\n",
-      "Usuário escolheu 1 e máquina escolheu 2\n",
-      "Resultado = 1\n",
+      "Usuário escolheu 1 e máquina escolheu 4\n",
+      "Resultado = 2\n",
       "\n",
-      " Pontos para o usuário =  1 Pontos para a máquina =  2 Empate =  0 \n",
+      " Pontos para o usuário =  1 Pontos para a máquina =  1 Empate =  1 \n",
       "\n",
-      "A MÁQUINA GANHOU\n"
+      "DEU EMPATE\n"
      ]
     }
    ],
@@ -335,6 +335,13 @@
     "# Print by console the winner of the game based on who has more accumulated wins\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -342,6 +349,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
