--- a/temperature/temperature.ipynb
+++ b/temperature/temperature.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +43,7 @@
        "Text(0.5, 1.0, 'Temperatures of our server throughout the day')"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -149,17 +149,12 @@
     "\n",
     "# 5.1 Solve the fault in the sensor by estimating a value\n",
     "\n",
+    "# 5.2 Update of the estimated value at 03:00 on the list\n",
     "for count, item in enumerate(y):\n",
     "    if item == 0:\n",
     "        y[count] = media\n",
     "    \n",
-    "\n",
-    "\n",
-    "# 5.2 Update of the estimated value at 03:00 on the list\n",
-    "\n",
-    "# Bonus: convert the list of ºC to ºFarenheit\n",
-    "\n",
-    "# y = [33,66,65,0,59,60,62,64,70,76,80,81,80,83,90,79,61,53,50,49,53,48,45,39]\n"
+    "\n"
    ]
   },
   {
@@ -176,30 +171,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "61.52\n",
-      "63.20\n",
-      "64.69\n",
-      "65.87\n",
-      "67.09\n",
-      "68.62\n",
-      "69.27\n",
-      "68.78\n",
-      "67.90\n",
-      "66.96\n",
-      "66.06\n",
-      "65.44\n",
-      "64.65\n",
-      "63.79\n",
-      "62.76\n",
-      "[10, 11, 12, 12, 13, 14, 14, 14, 15, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24]\n",
-      "[91, 151, 149, 140, 138, 140, 144, 147, 158, 169, 176, 178, 176, 181, 194, 174, 142, 127, 122, 120, 127, 118, 113, 102]\n"
+      "Fahrenheit =  [91, 151, 149, 140, 138, 140, 144, 147, 158, 169, 176, 178, 176, 181, 194, 174, 142, 127, 122, 120, 127, 118, 113, 102]\n"
      ]
     }
    ],
@@ -212,6 +191,8 @@
     "up70 = int()\n",
     "up80 = int()\n",
     "\n",
+    "#more than 4 hours with temperatures greater than or equal to 70ºC\n",
+    "\n",
     "for index, valor in enumerate(y, start=1):\n",
     "    if valor > 70:\n",
     "        up70 += 1\n",
@@ -219,39 +200,35 @@
     "            regular.append(index)\n",
     "            up70 = 0\n",
     "            \n",
+    "#some temperature higher than 80ºC\n",
+    "            \n",
     "for index, valor in enumerate(y, start=1):\n",
     "    if valor > 80:\n",
     "        regular.append(index)\n",
     "        \n",
-    "#[33,66,65,0,59,60,62,64,70,76,80,81,80,83,90,79,61,53,50,49,53,48,45,39]  \n",
+    "#average was higher than 65ºC throughout the day If any of these three is met, the cooling system must be changed.\n",
     "\n",
     "for index, valor in enumerate(y, start=1):\n",
     "    soma_live += valor\n",
     "    media_live = (soma_live/index)\n",
     "    if media_live > media:\n",
     "        regular.append(index)\n",
-    "        print(\"{:.2f}\".format(media_live))\n",
+    "#         print(\"{:.2f}\".format(media_live))\n",
     "        \n",
     "\n",
-    "\n",
-    "    \n",
-    "print(sorted(regular))\n",
-    "\n",
-    "fahrenheit = []\n",
     "# Bonus: convert the list of ºC to ºFarenheit\n",
     "\n",
+    "fahrenheit = []\n",
+    "\n",
     "for count, celsius in enumerate(y):\n",
-    "#         print(\"Antes: \", celsius)\n",
     "        f = 1.8* celsius +32\n",
     "        f = int(\"{:.0f}\".format(f))\n",
     "        fahrenheit.append(f)\n",
     "\n",
     "        \n",
-    "print(fahrenheit)\n",
-    "# y = [33,66,65,0,59,60,62,64,70,76,80,81,80,83,90,79,61,53,50,49,53,48,45,39]\n",
+    "print(\"Fahrenheit = \", fahrenheit)\n",
     "\n",
     "\n",
-    "# 5.2 Update of the estimated value at 03:00 on the list\n",
     "\n",
     "\n",
     "\n",
@@ -271,14 +248,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[11, 12, 13, 13, 14, 15, 15, 15, 16, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25]\n"
+      "Hours = [12, 13, 14, 14, 15, 16, 16, 16, 17, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26]\n"
      ]
     }
    ],
@@ -289,7 +266,7 @@
     "for index, valor in enumerate(regular):\n",
     "        regular[index] = valor + 1\n",
     "        \n",
-    "print(sorted(regular))"
+    "print(\"Hours =\", sorted(regular))"
    ]
   },
   {
@@ -305,15 +282,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "60.25\n",
-      "144.875\n"
+      "Média Celsius =  60.25\n",
+      "Média Fahrenheit =  144.875\n"
      ]
     }
    ],
@@ -322,14 +299,15 @@
     "# 4. Standard deviation of each of the lists. How they relate?\n",
     "\n",
     "\n",
-    "print (media)\n",
+    "print (\"Média Celsius = \", media)\n",
     "\n",
+    "## Média Fahrenheit\n",
     "\n",
     "soma_f= 0\n",
     "for i in fahrenheit:\n",
     "    soma_f+=i\n",
     "    media_f= soma_f/len(fahrenheit)\n",
-    "print(media_f)    \n",
+    "print(\"Média Fahrenheit = \", media_f)    \n",
     "\n",
     "\n",
     "\n",
