--- a/snail-and-well/snail-and-well.ipynb
+++ b/snail-and-well/snail-and-well.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
     "# well height, daily advance, night retreat, accumulated distance\n",
     "# Assign 0 to the variable that represents the solution\n",
     "# Write the code that solves the problem\n",
-    "# Print the result with print('Days =', days)\n",
+    "\n",
     "\n",
     "botton= int(0)\n",
     "snail_day= int(30)\n",
@@ -57,6 +57,8 @@
     "\n",
     "for i in path:\n",
     "\tdays+=0.5\n",
+    "\n",
+    "# Print the result with print('Days =', days)\n",
     "\n",
     "print('Days=', days)\n"
    ]
@@ -93,15 +95,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[30, 10, 40, 20, 50, 30, 60, 40, 70, 50, 80, 60, 90, 70, 100, 80, 110, 90, 120, 100, 125]\n",
-      "Minimun = 10 Maximum = 125 Média = 67.86\n"
+      "Path =  [30, 10, 40, 20, 50, 30, 60, 40, 70, 50, 80, 60, 90, 70, 100, 80, 110, 90, 120, 100, 125]\n",
+      "Minimun = 10 Maximum = 125 Média = 67.86\n",
+      "Desvio Padrão =  33.11\n"
      ]
     }
    ],
@@ -120,7 +123,7 @@
     "    else:\n",
     "        pass\n",
     "    \n",
-    "print(path)\n",
+    "print(\"Path = \", path)\n",
     "\n",
     "average = sum(path)/ len(path)\n",
     "\n",
@@ -128,22 +131,11 @@
     "\n",
     "\n",
     "# What is the standard deviation of your displacement during the day?\n",
-    "\n"
+    "import statistics\n",
+    "\n",
+    "\n",
+    "print( \"Desvio Padrão = \", \"%.2f\" %(statistics.stdev(path)))\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
